# stint

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  install.sh  stint.gpg
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/stint-cli/: Cargo.toml
crates/stint-cli/src/: main.rs
crates/stint-cli/src/tui/: app.rs  mod.rs  timeline.rs  ui.rs
crates/stint-core/: Cargo.toml
crates/stint-core/src/: config.rs  dateparse.rs  discover.rs  duration.rs  error.rs  hook.rs  import.rs  lib.rs  report.rs  service.rs
crates/stint-core/src/models/: entry.rs  mod.rs  project.rs  session.rs  tag.rs  types.rs
crates/stint-core/src/storage/: error.rs  mod.rs  sqlite.rs
crates/stint-server/: Cargo.toml
crates/stint-server/src/: api.rs  lib.rs
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
editors/vscode/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
editors/vscode/src/: extension.ts
pool/main/s/stint/: stint-x86_64-unknown-linux-gnu.deb
site/: template.html
xtask/: Cargo.toml
xtask/src/: main.rs
