[package]
name = "stint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal-native project time tracker"

[[bin]]
name = "stint"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
stint-core = { path = "../stint-core" }
time = "0.3"
