[package]
name = "stint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal-native project time tracker"

[[bin]]
name = "stint"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
stint-core = { path = "../stint-core" }
time = { version = "0.3", features = ["local-offset", "formatting"] }
