[package]
name = "stint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain logic, data models, and storage traits for Stint"

[dependencies]
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
ulid = "1"

[dev-dependencies]
tempfile = "3"
