[package]
name = "stint-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local HTTP API server for Stint"
publish = false

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stint-core = { path = "../stint-core" }
time = { version = "0.3", features = ["serde", "formatting"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
