[package]
name = "stint-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local HTTP API server for Stint"
readme = "../../README.md"
keywords = ["time-tracking", "api", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stint-core = { version = "0.2.0", path = "../stint-core" }
time = { version = "0.3", features = ["serde", "formatting"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
